<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBlue"
    tools:context=".ui.splash.permission.keylog.KeylogFragment">


    <com.google.android.material.card.MaterialCardView
        style="@style/main_card_view"
        app:cardCornerRadius="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                style="@style/image_view_style"
                app:srcCompat="@drawable/keylogger" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/main_desc_style"
                android:text="@string/allow_keylogging" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/other_desc_style"
                android:text="@string/keylog_desc" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="204dp">

                <View
                    android:id="@+id/left_circle"
                    style="@style/my_customleft_view"
                    android:background="@drawable/half_circle_left" />

                <View style="@style/my_dot_line_view" />

                <View
                    android:id="@+id/right_circle"
                    style="@style/my_custom_rigth_line" />

            </RelativeLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/allow_keylog_service"
                style="@style/my_checker_btn"
                android:layout_marginBottom="32dp"
                android:text="@string/allow"
                app:cornerRadius="11dp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>