<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBlue"
    tools:context=".ui.splash.permission.monitoring.MonitorSettingsFragment">


    <com.google.android.material.card.MaterialCardView
        style="@style/main_card_view"
        app:cardCornerRadius="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/back_monitor_frag"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="8dp"
                    android:drawableStart="@drawable/ic_baseline_keyboard_backspace_24"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/montserrat_alternates"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/back"
                    android:textColor="@color/colorLighterBlue"
                    android:textSize="18sp" />
            </RelativeLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/desc_mobile_data_used"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:fontFamily="@font/montserrat_alternates"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/desc_mobile_network"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="4dp"
                android:fontFamily="@font/montserrat_alternates"
                android:letterSpacing="0.1"
                android:padding="16dp"
                android:text="@string/first_description"
                android:textColor="@color/colorGray" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/montserrat_alternates"
                android:letterSpacing="0.1"
                android:padding="16dp"
                android:text="@string/second_description"
                android:textColor="@color/colorGray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="204dp">

                <View
                    android:id="@+id/left_circle"
                    style="@style/my_customleft_view"
                    android:background="@drawable/half_circle_left" />

                <View style="@style/my_dot_line_view" />

                <View
                    android:id="@+id/right_circle"
                    style="@style/my_custom_rigth_line" />

            </RelativeLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/open_setting_monitor_btn"
                style="@style/my_checker_btn"
                android:layout_marginBottom="32dp"
                android:text="@string/open_settings"
                app:cornerRadius="11dp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>